7.5
Added back some important files and added Java Docs for newly created methods.