@@ -4,8 +4,8 @@ import bcu.B5.librarysystem.commands.Command;
 import bcu.B5.librarysystem.commands.DeleteBook;
 import bcu.B5.librarysystem.data.LibraryData;
 import bcu.B5.librarysystem.main.LibraryException;
-import bcu.B5.librarysystem.model.Book;
 import bcu.B5.librarysystem.model.Library;
+import bcu.B5.librarysystem.model.Book;
 
 import java.awt.BorderLayout;
 import java.awt.GridLayout;
@@ -15,13 +15,23 @@ import java.io.IOException;
 import java.time.LocalDate;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.swing.*;
 
+/**
+ * Window that allows users to perform a soft delete on books.
+ * <p>
+ * Only books that are not on loan may be deleted.
+ * </p>
+ */
 public class DeleteBookWindow extends JFrame implements ActionListener {
 
-    private MainWindow mw;
+	/**
+	 * DeleteBookWindow.
+	 *
+	 * @param mw = mainWindow that shares the library.
+	 */
+    private MainWindow mw; // reference to the main application window
 
     private JComboBox<Book> bookDropdown = new JComboBox<>();
 
@@ -38,7 +48,7 @@ public class DeleteBookWindow extends JFrame implements ActionListener {
 
         try {
             UIManager.setLookAndFeel(UIManager.getSystemLookAndFeelClassName());
-        } catch (Exception ex) {}
+        } catch (Exception ex) {} // ignore look-and-feel errors
 
         setTitle("Delete Book");
         setSize(500, 160);
@@ -62,19 +72,30 @@ public class DeleteBookWindow extends JFrame implements ActionListener {
         setVisible(true);
     }
 
+    /**
+     * 
+     * Non-deleted books sorted alphabetically.
+     * @param patrons = list of patrons from library system.
+     */
     private void populateDropdown() {
         bookDropdown.removeAllItems();
 
-        List<Book> books = mw.getLibrary().getBooks().stream()
+        List<Book> books = mw.getLibrary().getBooks()
+            .stream()
             .filter(b -> !b.isDeleted())
             .sorted(Comparator.comparing(Book::getTitle, String.CASE_INSENSITIVE_ORDER))
-            .collect(Collectors.toList());
+            .toList();
 
         for (Book b : books) {
             bookDropdown.addItem(b);
         }
     }
 
+    /**
+     * Handles button click events.
+     *
+     * @param ae the action event triggered by user interaction.
+     */
     @Override
     public void actionPerformed(ActionEvent ae) {
         if (ae.getSource() == deleteBtn) {
@@ -84,6 +105,12 @@ public class DeleteBookWindow extends JFrame implements ActionListener {
         }
     }
 
+    /**
+     * Soft delete selected book.
+     * <p>
+     * The library state is backed up before any modifications.
+     * </p>
+     */
     private void deleteSelectedBook() {
 
         Book selected = (Book) bookDropdown.getSelectedItem();
@@ -98,7 +125,7 @@ public class DeleteBookWindow extends JFrame implements ActionListener {
             return;
         }
 
-        Library snapshot = mw.getLibrary().copy();
+        Library snapshot = mw.getLibrary().copy(); // backup for rollback
 
         try {
             Command delete = new DeleteBook(selected.getId());
@@ -117,7 +144,7 @@ public class DeleteBookWindow extends JFrame implements ActionListener {
             );
 
         } catch (IOException ioEx) {
-            mw.setLibrary(snapshot);
+            mw.setLibrary(snapshot); // rollback on storage failure
 
             JOptionPane.showMessageDialog(
                 this,
